--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <option value="1">Lauf bis 5 km – 1 Punkt</option>
             <option value="2">Lauf 5–10 km – 2 Punkte</option>
             <option value="3">Lauf ab 10 km – 3 Punkte</option>
+            <option value="1">Rad ab 10 Tages-km – 1 Punkt</option>
+            <option value="2">Rad ab 20 Tages-km – 2 Punkte</option>
+            <option value="3">Rad ab 30 Tages-km – 3 Punkte</option>
             <option value="1">Anderer Sport – 1 Punkt</option>
         </select>
         <input type="file" id="group1-image" accept="image/*" required />
@@ -36,6 +39,9 @@
             <option value="1">Lauf bis 5 km – 1 Punkt</option>
             <option value="2">Lauf 5–10 km – 2 Punkte</option>
             <option value="3">Lauf ab 10 km – 3 Punkte</option>
+            <option value="1">Rad ab 10 Tages-km – 1 Punkt</option>
+            <option value="2">Rad ab 20 Tages-km – 2 Punkte</option>
+            <option value="3">Rad ab 30 Tages-km – 3 Punkte</option>
             <option value="1">Anderer Sport – 1 Punkt</option>
         </select>
         <input type="file" id="group2-image" accept="image/*" required />
